Fix tree label overflow

--- a/src/App.css
+++ b/src/App.css
@@ -41,21 +41,16 @@ body {
 /* Talent tree */
 #tree {
   flex: 1;
-  height: 100%;
-  background-color: white;
+  background-color: grey;
 }
 
 .container {
+  height: 100vh;
   border: 0.5px solid red;
-  height: 100%;
   text-align: center;
 }
 
-.sub-tree {
-  height: 40%;
-}
-
-.sub-tree-col {
+.tree-col {
   height: 100%;
   border: 0.5px solid green;
 }
@@ -76,24 +71,28 @@ body {
 
 .hexagon-label {
   position: absolute;
-  width: 100%;
-  left: 0px;
-  top: 50%;
-  font-size: 1vw;
+  width: 20%;
+  margin: auto;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  text-align: center;
+  font-size: 0.9vw;
   font-weight: 600;
   mix-blend-mode: multiply;
 }
 
 .hexagon-label-red {
-  transform: translateY(-250%);
+  transform: translateY(-20%);
 }
 
 .hexagon-label-yellow {
-  transform: translateX(-3.5%) translateY(100%);
+  transform: translateX(-17%) translateY(85%);
 }
 
 .hexagon-label-blue {
-  transform: translateX(3.5%) translateY(100%);
+  transform: translateX(17%) translateY(85%);
 }
 
 .hexagon-talent-wrapper {
